--- a/SSfMT.html
+++ b/SSfMT.html
@@ -55,9 +55,10 @@
 <p>28/03/2017 Algorave, ODI Leeds, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://algorave.com/");</pre>
 
 <p><h3><a class='anchor' name='Links'>Links</a></h3>
-<pre class='code prettyprint lang-sc'>HelpBrowser.goTo("https://www.mstrcyork.org/"); //Music, Science and Technology Research Cluster (mstrc)
-HelpBrowser.goTo("https://www.mstrcyork.org/technologies-for-musical-creativity/"); //Technologies for Musical Creativity Group (TMCG)
-HelpBrowser.goTo("https://algorave.com/"); //Algoraves, next on the 28/03 in Leeds
-HelpBrowser.goTo("https://yorkshiresoundwomen.wordpress.com/"); //YSWN – Yorkshire Sound Women Network</pre>
+<pre class='code prettyprint lang-sc'>//replace "open" in code below to "start" if you are on windows
+"open https://www.mstrcyork.org/".unixCmd; //Music, Science and Technology Research Cluster (mstrc)
+"open https://www.mstrcyork.org/technologies-for-musical-creativity/".unixCmd; //Technologies for Musical Creativity Group (TMCG)
+"open https://algorave.com/".unixCmd; //Algoraves, next on the 28/03 in Leeds
+"open https://yorkshiresoundwomen.wordpress.com/".unixCmd; //YSWN – Yorkshire Sound Women Network</pre>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp</a><br>link::SSfMT::<br>sc version: 3.8.0</div></div></body></html>
