new ssfmt handbook

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -13,7 +13,7 @@
 <body onload='fixTOC();prettyPrint()'>
 <div class='contents'>
 <div class='header'>
-<div id='label'>SuperCollider MODULE INFORMATION (extension)</div>
+<div id='label'>SuperCollider SSFMT (extension)</div>
 <div id='categories'><a href='./../Browse.html#Tutorials/SSfMT'>Tutorials/SSfMT</a></div>
 <h1>Handbook</h1>
 <div id='summary'>Software Systems for Music Technology</div>
@@ -27,7 +27,6 @@
 <ul class='toc'><li class='toc2'><a href='#Assessment%20Methods'>Assessment Methods</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Strategy'>Assessment Strategy</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Deadlines'>Assessment Deadlines</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Learning%20Outcomes'>Learning Outcomes</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module%20Overview'>Module Overview</a></li>
 <ul class='toc'><li class='toc2'><a href='#Module%20Description'>Module Description</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Module%20Aims'>Module Aims</a></li>
@@ -41,7 +40,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Reading'>Reading</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Listening'>Listening</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#SuperCollider%20Links'>SuperCollider Links</a></li>
-<ul class='toc'></ul></ul></ul></div><div class='image'><img src='CSIR Mk 1.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
+<ul class='toc'></ul></ul></ul></div><div class='image'><img src='DX7.png'/><br><b>DX7 Schematics</b></div>
 <dl>
 <dt>BA(Hons) Music<dt>BA(Hons) Music and Sound Recording<dt>Department of Music<dt>University of York<dt>2017-2018<dd></dl>
 <h2><a class='anchor' name='Module%20Outline'>Module Outline</a></h2>
@@ -63,12 +62,7 @@
 <p>The assessment criteria specific to this module will be considered and used as a measure to determine your achievement in the assessment process at the end of the module. Seminars will provide the opportunity to gain new knowledge in computer music, programming and creative applications of technology. The workshops will give you practical experience in coding and interactive music technologies and the opportunity to creatively experiment with computers. Practical work will provide the opportunity to demonstrate technical and creative skills and your involvement with technically challenging problems, creative processes and research activities. The written documentation provides you with an opportunity to demonstrate your level of knowledge and understanding of relevant technical and creative concepts, debates and contexts and to present this information clearly.<h3><a class='anchor' name='Assessment%20Deadlines'>Assessment Deadlines</a></h3>
 <ul>
 <li><strong>Seminar Presentation (10%)</strong>: 14 and 17 February 2017 (in class).<li><strong>Portfolio of Work (60%)</strong>: Performance, improvisation, composition, installation or demonstration. Dates to be negotiated with tutor.<li><strong>Written Documentation (30%)</strong>: 18 April 2017 by 16:00.</ul>
-<h3><a class='anchor' name='Learning%20Outcomes'>Learning Outcomes</a></h3>
-
-<p><strong>1st years</strong>: On completion of the module, in their independent work, students should demonstrate Learning Outcomes A1-A8, A10 &amp; A11
-<p><strong>2nd years</strong>: On completion of the module, in their independent work, students should demonstrate Learning Outcomes B1-B8, B10 &amp; B11
-<p><strong>3rd years</strong>: On completion of the module, in their independent work, students should demonstrate Learning Outcomes C1-C8, C10 &amp; C11
-<p>You can find the Learning Outcomes <a href="http://www.york.ac.uk/music/undergraduate/modules/learning-outcomes/">here</a>.<h2><a class='anchor' name='Module%20Overview'>Module Overview</a></h2>
+<h2><a class='anchor' name='Module%20Overview'>Module Overview</a></h2>
 <h3><a class='anchor' name='Module%20Description'>Module Description</a></h3>
 
 <p>Something here<h3><a class='anchor' name='Module%20Aims'>Module Aims</a></h3>
@@ -178,4 +172,4 @@ Computer.url("http://supercollider.github.io/pages"); //SuperCollider Wiki
 Computer.url("http://supercollider.github.io/community/mailing-lists"); //SuperCollider Mailing List - sc-users
 Computer.url("http://sccode.org/"); //SuperCollider code
 Computer.url("https://twitter.com/search?q=%23sc140 &amp; open https://twitter.com/sc140tweets"); //sctweets</pre>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/Module Information/Handbook.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/Module Information/Handbook.schelp</a><br>link::Module Information/Handbook::<br>sc version: 3.8.0</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp</a><br>link::SSfMT/Handbook::<br>sc version: 3.8.0</div></div></body></html>
