--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -40,7 +40,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Reading'>Reading</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Listening'>Listening</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#SuperCollider%20Links'>SuperCollider Links</a></li>
-<ul class='toc'></ul></ul></ul></div><div class='image'><img src='DX7.png'/><br><b>DX7 Schematics</b></div>
+<ul class='toc'></ul></ul></ul></div><div class='image'><img src='emsplay.png'/><br><b>EMS Studio in London</b></div>
 <dl>
 <dt>BA(Hons) Music<dt>BA(Hons) Music and Sound Recording<dt>Department of Music<dt>University of York<dt>2017-2018<dd></dl>
 <h2><a class='anchor' name='Module%20Outline'>Module Outline</a></h2>
