added equipment and links

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -113,36 +113,34 @@
 <li>Digital Audio Workstations (recording, editing, MIDI and processing):<ul>
 <li><a href="http://www.reaper.fm/">Reaper</a> (free - or very cheap...)<li><a href="http://www.apple.com/uk/logic-pro/">Logic</a><li><a href="http://www.avid.com/pro-tools">ProTools</a><li><a href="https://www.ableton.com/">Ableton Live</a></ul>
 
-<p><li>Audio analysis:<pre class='code prettyprint lang-sc'>Computer.url("http://www.klingbeil.com/spear/"); //Spear (free)
-Computer.url("http://sonicvisualiser.org/"); //Sonic Visualiser (free)
-Computer.url("https://www.izotope.com/en/products/mix/insight.html"); //iZotope Insight</pre>
+<p><li>Audio analysis:<ul>
+<li><a href="http://www.klingbeil.com/spear/">Spear</a> (free)<li><a href="http://sonicvisualiser.org/">Sonic Visualiser</a> (free)<li><a href="https://www.izotope.com/en/products/mix/insight.html">iZotope Insight</a></ul>
 
-<p><li>Notation:<pre class='code prettyprint lang-sc'>Computer.url("http://www.avid.com/sibelius"); //Sibelius
-Computer.url("http://www.finalemusic.com/"); //Finale
-Computer.url("http://lilypond.org/"); //Lilypond (free - texted based engraver)</pre>
+<p><li>Notation:<ul>
+<li><a href="http://www.avid.com/sibelius">Sibelius</a><li><a href="http://www.finalemusic.com/">Finale</a><li><a href="http://lilypond.org/">Lilypond</a> (free - texted based engraver)</ul>
 
-<p><li>Visual programming for Audio<pre class='code prettyprint lang-sc'>Computer.url("https://puredata.info/"); //Pure Data (free)
-Computer.url("https://cycling74.com/"); //Max (free trail for 30 days)</pre>
+<p><li>Visual programming for Audio<ul>
+<li><a href="https://puredata.info/">Pure Data</a> (free)<li><a href="https://cycling74.com/">Max</a> (free trail for 30 days)</ul>
 
-<p><li>Visual programming for Visuals<pre class='code prettyprint lang-sc'>Computer.url("https://cycling74.com/"); //Jitter - part of Max (free trail for 30 days)</pre>
+<p><li>Visual programming for Visuals<ul>
+<li><a href="https://cycling74.com/">Jitter</a> (part of Max)</ul>
 
-<p><li>Programming for Visuals<pre class='code prettyprint lang-sc'>Computer.url("https://processing.org/"); //Processing (free)</pre>
+<p><li>Programming for Visuals<ul>
+<li><a href="https://processing.org/">Processing</a> (free)</ul>
 
-<p><li>Live coding environments<pre class='code prettyprint lang-sc'>Computer.url("https://toplap.org/tidal/"); //TidalCycles (free - sc based)
-Computer.url("http://sonic-pi.net/"); //SonicPi (free - sc based)
-Computer.url("http://gibber.cc/"); //Gibber (web browser - javascript based)</pre>
+<p><li>Live coding environments<ul>
+<li><a href="https://toplap.org/tidal/">TidalCycles</a> (free - sc based)<li><a href="http://sonic-pi.net/">SonicPi</a> (free - sc based)<li><a href="http://gibber.cc/">Gibber</a> (web browser - javascript based)</ul>
 
-<p><li>Interactive Audio for Web Development (javascript)<pre class='code prettyprint lang-sc'>Computer.url("https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API"); //Web Audio API</pre>
+<p><li>Interactive Audio for Web Development (javascript)<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API">Web Audio API</a></ul>
 
-<p><li>iPhone/iPad Apps:<pre class='code prettyprint lang-sc'>Computer.url("https://itunes.apple.com/gb/app/touchosc/id288120394?mt=8"); //TouchOSC
-Computer.url("https://itunes.apple.com/gb/app/lemur/id481290621?mt=8"); //Lemur</pre>
+<p><li>iPhone/iPad Apps:<ul>
+<li><a href="https://itunes.apple.com/gb/app/touchosc/id288120394?mt=8">TouchOSC </a><a href="https://itunes.apple.com/gb/app/lemur/id481290621?mt=8">Lemur</a></ul>
 </ul>
 
-<p><strong>Equipment</strong>: For this module you can use a variety of equipment to interface with your computer. At the Department of Music we have a range of equipment and resources that you can book for work on this module. The stores at the MRC contain microphones, portable recorders, audio interfaces, video cameras, midi controllers, audio interfaces, other human interface devices (HIDs including joysticks, game contorllers, etc.) as well as cables and accessories. You can use anything you like that is made accessible to you by the Department. You can use the computers in the studios if you have limited access to a laptop. You can book spaces and equipment online or talk to the Department technician Ben Eyes (ben.eyes@york.ac.uk).
-<p>You may also use your own equipment for this module including your computers, audio interfaces, iPhones (or other smartphones), iPads (or other tablets), game controllers, etc. You can also purchase some specialist equipment if you desire to. If you want to continue working in computer music after this module, it might be a good idea to purchase some basic items like an audio interface and a midi controller. You can buy relatively cheap equipment for interfacing with your computer - here are some examples:<pre class='code prettyprint lang-sc'>Computer.url("http://www.ebay.co.uk/sch/Audio-MIDI-Interfaces/123445/i.html?_from=R40&amp;_nkw=audio+interface") //audio interfaces @ ebay
-Computer.url("http://www.ebay.co.uk/sch/Pro-Audio-MIDI-Controllers/178896/bn_2315660/i.html"); //midi controllers @ ebay
-Computer.url("http://www.ebay.co.uk/sch/Video-Game-Controllers-Attachments/117042/bn_552150/i.html"); //game controllers @ ebay
-Computer.url("https://www.arduino.cc/"); //arduino</pre>
+<p><strong>Equipment</strong>: For this module you can use a variety of equipment with your computer. At the Department of Music we have a range of equipment and resources that you can book for work on this module. The stores at the MRC contain microphones, portable recorders, audio interfaces, video cameras, midi controllers, audio interfaces, other human interface devices (HIDs including joysticks, game contorllers, etc.) as well as cables and accessories. You can use anything you like that is made available to you by the Department. You can use the computers in the studios if you have limited access to a laptop. You can book spaces and equipment online or talk to the Department technician Ben Eyes (ben.eyes@york.ac.uk).
+<p>You may also use your own equipment for this module including your computers, audio interfaces, iPhones (or other smartphones), iPads (or other tablets), game controllers, etc. You can also purchase some specialist equipment if you desire to. If you want to continue working in computer music after this module, it might be a good idea to purchase some basic items like an audio interface and a midi controller. You can buy relatively cheap equipment for interfacing with your computer - here are some examples:<ul>
+<li><a href="http://www.ebay.co.uk/sch/Audio-MIDI-Interfaces/123445/i.html?_from=R40&_nkw=audio+interface">audio interfaces @ ebay</a><li><a href="http://www.ebay.co.uk/sch/Pro-Audio-MIDI-Controllers/178896/bn_2315660/i.html">midi controllers @ ebay</a><li><a href="http://www.ebay.co.uk/sch/Video-Game-Controllers-Attachments/117042/bn_552150/i.html">game controllers @ ebay</a><li><a href="https://www.arduino.cc/">arduino</a><li><a href="http://bela.io/">bela</a></ul>
 
 <p>If you need advice on what piece of equipment to buy for a particular purpose, talk to me or Ben, or any other technology enthusiast at the Department.<h3><a class='anchor' name='Reading'>Reading</a></h3>
 <ul>
