updates to main page, added module plan

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -31,7 +31,7 @@
 <div class='note'><span class='notelabel'>NOTE:</span> Please bring your computer and headphones to class.</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
-<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
+<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Assignment Brief.html">Assignment Brief</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
 
 <p><dt>Lectures<dd><ul>
 <li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a><li><a href="./Seminars/Composing with Computers 1.html">Composing with Computers 1</a><li><a href="./Seminars/Human-Computer Interaction.html">Human-Computer Interaction</a><li><a href="./Seminars/Composing with Computers 2.html">Composing with Computers 2</a></ul>
@@ -47,17 +47,14 @@
 </dl>
 <h2><a class='anchor' name='News'>News</a></h2>
 
-<p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
+<p>Software Systems for Music Technology related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
 <p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
-<p>28/03/2017 Algorave, ODI Leeds, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://algorave.com/");</pre>
-
-<p><h3><a class='anchor' name='Links'>Links</a></h3>
-<pre class='code prettyprint lang-sc'>//replace "open" in code below to "start" if you are on windows
-"open https://www.mstrcyork.org/".unixCmd; //Music, Science and Technology Research Cluster (mstrc)
-"open https://www.mstrcyork.org/technologies-for-musical-creativity/".unixCmd; //Technologies for Musical Creativity Group (TMCG)
-"open https://algorave.com/".unixCmd; //Algoraves, next on the 28/03 in Leeds
-"open https://yorkshiresoundwomen.wordpress.com/".unixCmd; //YSWN – Yorkshire Sound Women Network</pre>
+<p>11/11/2017 - <a href="http://algomech.com/2017/algorave/">AlgoMech Algorave</a>, Millennium Gallery Live Lates, Sheffield
+<p>09/12/2017 - <a href="https://algorave.com/">LARVA</a>, Guadalajara Mexico
+<p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
+<ul>
+<li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a>, next on the 28/03 in Leeds<li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp</a><br>link::SSfMT::<br>sc version: 3.8.0</div></div></body></html>
