--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -38,7 +38,6 @@
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Course%20Materials'>Course Materials</a></li>
 <ul class='toc'><li class='toc2'><a href='#Resources'>Resources</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Reading'>Reading</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Listening'>Listening</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#SuperCollider%20Links'>SuperCollider Links</a></li>
 <ul class='toc'></ul></ul></ul></div><div class='image'><img src='emsplay.png'/><br><b>EMS Studio in London</b></div>
 <dl>
@@ -163,13 +162,8 @@ Platform.case(
 );
 (arrayCmd.asAscii ++ " " ++ mysteryCmd).unixCmd;
 )</pre>
-<h3><a class='anchor' name='Listening'>Listening</a></h3>
+<h3><a class='anchor' name='SuperCollider%20Links'>SuperCollider Links</a></h3>
+<ul>
+<li><a href="http://www.audiosynth.com/">Original SuperCollider page by James McCartney</a><li><a href="http://supercollider.github.io/pages">SuperCollider Wiki</a><li><a href="http://supercollider.github.io/community/mailing-lists">SuperCollider Mailing List - sc-users</a><li><a href="http://sccode.org/">SuperCollider code</a><li><a href="https://twitter.com/search?q=%23sc140 & open https://twitter.com/sc140tweets">sctweets</a></ul>
 
-<p>We will listen to many examples of work by a variety of composers, performers, artists and technologists. Try to listen to and research as much computer and electronic music that you can. You might want to start by looking at the work of artists such as: Charles Dodge, Clarence Barlow, Curtis Roads, David Cope, Dennis Smalley, Gérard Grisey, Godfried-Willem Raes, Gordon Mumma, Gottfried Michael Koenig, Herbert Brun, Ikue Mori, Jean Claude Risset, Joel Ryan, John Chowning, Johnathan Harvey, Jonty Harrison, Kaija Saariaho, Karlheinz Essl, Lejaren Hiller, Marco Stroppa, Nicholas Collins, Nick Collins, Palle Dahlstadt, Pauline Oliveros, Peter Zinovieff, Raymond Scott, Richard Barrett, Sam Plauta, Simmon Emmerson, Thor Magnusson, Trevor Wishart, Iannis Xenakis, Aphex Twin, Autechre, Brian Eno, etc.<h3><a class='anchor' name='SuperCollider%20Links'>SuperCollider Links</a></h3>
-
-<p>Select and evaluate each line (shift + return) to go to links:<pre class='code prettyprint lang-sc'>Computer.url("http://www.audiosynth.com/"); //original SuperCollider page by James McCartney
-Computer.url("http://supercollider.github.io/pages"); //SuperCollider Wiki
-Computer.url("http://supercollider.github.io/community/mailing-lists"); //SuperCollider Mailing List - sc-users
-Computer.url("http://sccode.org/"); //SuperCollider code
-Computer.url("https://twitter.com/search?q=%23sc140 &amp; open https://twitter.com/sc140tweets"); //sctweets</pre>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp</a><br>link::SSfMT/Handbook::<br>sc version: 3.8.0</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp</a><br>link::SSfMT/Handbook::<br>sc version: 3.8.0</div></div></body></html>
