typo in module plan

--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="schedule2.fld/filelist.xml">
+<link rel=File-List href="moduleplan.fld/filelist.xml">
 <style>
 <!--table
 	{mso-displayed-decimal-separator:"\.";
@@ -553,8 +553,8 @@ td
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
   <td height=21 class=xl80 width=111 style='height:16.0pt;width:83pt'>Mon 6.11</td>
-  <td class=xl81 width=111 style='width:83pt'>Mon 20.1</td>
-  <td class=xl82 width=111 style='width:83pt'>Fri 1.3</td>
+  <td class=xl81 width=111 style='width:83pt'>Mon 20.11</td>
+  <td class=xl82 width=111 style='width:83pt'>Fri 1.12</td>
   <td class=xl81 width=111 style='width:83pt'>Tue 16.1</td>
   <td class=xl83 width=111 style='width:83pt'>Tue 23.1</td>
   <td class=xl81 width=111 style='width:83pt'>Tue 30.1</td>
